--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   "license": "MIT",
   "name": "html5-boilerplate",
   "scripts": {
+    "start": "node server.js",
+    "postinstall": "npm run build",
     "build": "gulp build",
     "test": "gulp archive && mocha --require babel-core/register --reporter spec --timeout 5000"
   },
@@ -65,5 +67,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/h5bp/html5-boilerplate.git"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "http": "0.0.0",
+    "path": "^0.12.7"
   }
 }
