--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "travis-after-all": "^1.4.5"
   },
   "engines": {
-    "node": ">=6",
-    "npm": ">=3"
+    "node": "8.11.4",
+    "npm": "5.6.0"
   },
   "babel": {
     "presets": [
